--- a/testView.html
+++ b/testView.html
@@ -19,6 +19,37 @@
     <br>
     <md-button ng-click="getStore()">get Store</md-button>
 
+    Store.name = {{store.name}}
+
+    <md-card md-theme-watch>
+        <md-card-title>
+            <md-card-title-text>
+                <span class="md-headline">{{store.name}}</span>
+                <span class="md-subhead">{{store.storeAddress.city}}, {{store.storeAddress.street}}, {{store.storeAddress.number}}</span>
+            </md-card-title-text>
+            <md-card-title-media>
+                <div class="md-media-lg card-media">
+                </div>
+            </md-card-title-media>
+        </md-card-title>
+        <md-card-actions layout="row" layout-align="end center">
+            <md-button>Action 1</md-button>
+            <md-button>Action 2</md-button>
+        </md-card-actions>
+    </md-card>
+
+    <md-list flex>
+        <md-subheader class="md-no-sticky">3 line item (with hover)</md-subheader>
+        <md-list-item class="md-3-line" ng-repeat="item in store.items" ng-click="null">
+            <img ng-src="{{'http://cdn.macrumors.com/article-new/2015/02/iphone7lineup.jpg'}}?{{$index}}" class="md-avatar" alt="{{item.who}}" />
+            <div class="md-list-item-text" layout="column">
+                <h3>{{ item.name }}</h3>
+                <h4>{{ item.price }}</h4>
+                <p>{{ item.category }}</p>
+                <p>Rating: {{item.avgRating}}</p>
+            </div>
+        </md-list-item>
+    </md-list>
 
 
     <!-- Angular Material requires Angular.js Libraries -->
