--- a/testView.html
+++ b/testView.html
@@ -26,7 +26,7 @@
             <section layout="row" flex>
 
 
-                <md-sidenav
+                <md-sidenav style="min-height:100vh; margin-top: 10px"
                         class="md-sidenav-left"
                         md-component-id="left"
                         md-is-locked-open="$mdMedia('gt-md')"
