--- a/itemForm.html
+++ b/itemForm.html
@@ -6,8 +6,9 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
-    <link rel="stylesheet" href="css/container.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/row.css">
+    <link rel="stylesheet" href="css/containerFromMaterialize.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body ng-cloak ng-controller="ItemFormController" class="md-padding" id="popupContainer">
 
@@ -21,12 +22,12 @@
     <div class="container">
         <md-content class="row">
             <div class="col l4 m8 s12">
-                <md-input-container>
+                <md-input-container class="input-add-item">
                     <label>Name</label>
                     <input ng-model="item.name" type="text">
                 </md-input-container>
 
-                <md-input-container>
+                <md-input-container class="input-add-item">
                     <label>State</label>
                     <md-select ng-model="item.category" style="width: 300px">
                         <md-option ng-repeat="category in categories" value="{{category}}">
