--- a/testView.html
+++ b/testView.html
@@ -6,7 +6,7 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/containerFromMaterialize.css">
 </head>
 <body ng-cloak ng-controller="TestCtrl">
 
