--- a/main.html
+++ b/main.html
@@ -7,6 +7,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
     <link rel="stylesheet" href="css/containerFromMaterialize.css">
+    <link rel="stylesheet" href="css/row.css">
+    <link rel="stylesheet" href="css/containerFromMaterialize.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body ng-cloak ng-controller="TestCtrl">
 
@@ -68,6 +71,8 @@
     <script src="js/app.js"></script>
     <script src="js/controller/testController.js"></script>
     <script src="js/controller/SideNavController.js"></script>
+    <script src="js/controller/ItemFormController.js"></script>
+    <script src="js/service/itemService.js"></script>
     <script src="js/controller/sampleController.js"></script>
 
 </body>
