working adding products to multiple stores on the one form

--- a/main.html
+++ b/main.html
@@ -21,14 +21,14 @@
                 <img
                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Apple_logo_black.svg/768px-Apple_logo_black.svg.png"
                         style="height: 100px; width: 100px; margin: 15px;">
-                <h1 class="md-toolbar-tools" style="float: right">Sidenav Left</h1>
+                <h1 class="md-toolbar-tools" style="float: right">ALLStore</h1>
             </div>
         </md-toolbar>
 
         <div class="container">
             <section layout="row" flex>
 
-                <md-sidenav style="min-height:100vh; margin-top: 10px"
+                <md-sidenav style="min-height:100vh; width: 25%; margin-top: 10px"
                             class="md-sidenav-left"
                             md-component-id="left"
                             md-is-locked-open="$mdMedia('gt-md')"
@@ -39,8 +39,7 @@
                             Close Sidenav Left
                         </md-button>
                         <p hide show-gt-md>
-                            This sidenav is locked open on your device. To go back to the default behavior,
-                            narrow your display.
+                            Feel free to add some products to our database
                         </p>
                     </md-content>
 
