added view for items in store and increse view feature

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/containerFromMaterialize.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body ng-cloak ng-controller="TestCtrl">
+<body ng-cloak>
 
 
     <div ng-controller="AppCtrl" layout="column" style="height: auto;" ng-cloak>
@@ -45,7 +45,7 @@
 
                 </md-sidenav>
 
-                <md-content flex layout-padding>
+                <md-content flex>
 
                     <!-- container -->
                     <ng-view></ng-view>
