--- a/testView.html
+++ b/testView.html
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
     <link rel="stylesheet" href="css/containerFromMaterialize.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/row.css">
 </head>
 <body ng-cloak ng-controller="TestCtrl">
 
@@ -76,7 +78,7 @@
                                     </md-card-title>
                                     <md-card-content layout="row" layout-align="space-between">
                                         <div class="md-media-xl card-media">
-                                            <img ng-src="{{'http://cdn.macrumors.com/article-new/2015/02/iphone7lineup.jpg'}}?{{$index}}"
+                                            <img ng-src="{{item.photo}}?{{$index}}"
                                                  style="width: auto; height: 200px" alt="{{item.photo}}"/>
                                         </div>
                                         <p>{{item.description}}</p>
