added itemView and controller

--- a/main.html
+++ b/main.html
@@ -73,6 +73,7 @@
     <script src="js/controller/ItemFormController.js"></script>
     <script src="js/service/itemService.js"></script>
     <script src="js/controller/sampleController.js"></script>
+    <script src="js/controller/ItemController.js"></script>
 
 </body>
 </html>
