added single item view

--- a/main.html
+++ b/main.html
@@ -25,10 +25,10 @@
             </div>
         </md-toolbar>
 
-        <div class="container">
+        <div>
             <section layout="row" flex>
 
-                <ng-view></ng-view>
+                <ng-view style="width: 100%"></ng-view>
 
             </section>
         </div>
