--- a/main.html
+++ b/main.html
@@ -46,11 +46,15 @@
     <script src="js/AngularMaterial/angular-material.js"></script>
 
     <!-- Your application bootstrap  -->
+
+
     <script src="js/app.js"></script>
+    <script src="js/service/itemService.js"></script>
+    <script src="js/service/StoreService.js"></script>
     <script src="js/controller/testController.js"></script>
     <script src="js/controller/SideNavController.js"></script>
     <script src="js/controller/ItemFormController.js"></script>
-    <script src="js/service/itemService.js"></script>
+
     <script src="js/controller/sampleController.js"></script>
     <script src="js/controller/ItemController.js"></script>
 
