--- a/itemForm.html
+++ b/itemForm.html
@@ -171,7 +171,7 @@
     <!-- Your application bootstrap  -->
     <script src="js/app.js"></script>
     <script src="js/controller/ItemFormController.js"></script>
-    <script src="js/service/itemService.js"></script>
+    <script src="js/service/ItemService.js"></script>
 
 </body>
 </html>
