--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
 
 
     <script src="js/app.js"></script>
-    <script src="js/service/itemService.js"></script>
+    <script src="js/service/ItemService.js"></script>
     <script src="js/service/StoreService.js"></script>
     <script src="js/controller/testController.js"></script>
     <script src="js/controller/SideNavController.js"></script>
