added review feature - service and simple view

--- a/main.html
+++ b/main.html
@@ -51,6 +51,7 @@
     <script src="js/app.js"></script>
     <script src="js/service/ItemService.js"></script>
     <script src="js/service/StoreService.js"></script>
+    <script src="js/service/ReviewService.js"></script>
     <script src="js/controller/testController.js"></script>
     <script src="js/controller/SideNavController.js"></script>
     <script src="js/controller/ItemFormController.js"></script>
