finished review feature

--- a/main.html
+++ b/main.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="css/row.css">
     <link rel="stylesheet" href="css/containerFromMaterialize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/stars.css">
 </head>
-<body ng-cloak>
+<body ng-cloak style="margin: 0">
 
 
     <div ng-controller="AppCtrl" layout="column" style="height: auto;" ng-cloak>
@@ -43,7 +44,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.min.js"></script>
 
     <!-- Angular Material Library -->
-    <script src="js/AngularMaterial/angular-material.js"></script>
+    <script src="https://cdn.rawgit.com/angular/bower-material/master/angular-material.js"></script>
 
     <!-- Your application bootstrap  -->
 
