--- a/main.html
+++ b/main.html
@@ -17,11 +17,14 @@
 
     <div ng-controller="AppCtrl" layout="column" style="height: auto;" ng-cloak>
 
-        <md-toolbar style="background-color: #80CBC4">
+        <md-toolbar layout="row" style="background-color: #80CBC4">
+            <div hide-gt-md flex>
+                <md-icon ng-click="toggleLeft()" style="margin: 15px; font-size: 30px">menu</md-icon>
+            </div>
             <div>
-                <img
+                <a ng-href="/#/"><img
                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Apple_logo_black.svg/768px-Apple_logo_black.svg.png"
-                        style="height: 100px; width: 100px; margin: 15px;">
+                        style="height: 100px; width: 100px; margin: 15px;"></a>
                 <h1 class="md-toolbar-tools" style="float: right">ALLStore</h1>
             </div>
         </md-toolbar>
