--- a/main.html
+++ b/main.html
@@ -57,7 +57,7 @@
         <div style="background-color: #80CBC4;" layout="column" layout-gt-md="row">
             <div flex-gt-md="33" flex="" layout="row">
                 <div hide-gt-md>
-                    <md-icon ng-click="toggleLeft()" style="margin: 15px; cursor: pointer; margin-right: 0">menu</md-icon>
+                    <md-icon ng-click="toggleLeft()" style="margin: 15px; cursor: pointer; margin-right: 0; font-size: 45px; color: black; margin-top: 20px; margin-right: 20px">menu</md-icon>
                 </div>
                 <div style="padding-top: 8px">
                     <img src="http://www.freeiconspng.com/uploads/shopping-cart-icon-30.png" style="height: 75px; margin-left: 10px">
