imprved view added footer

--- a/main.html
+++ b/main.html
@@ -90,6 +90,10 @@
             </section>
         </div>
 
+        <div style="height: 100px; background-color: #00acc1">
+
+        </div>
+
     </div>
 
 
