--- a/main.html
+++ b/main.html
@@ -63,8 +63,10 @@
                     </md-icon>
                 </div>
                 <div style="padding-top: 8px">
-                    <img src="http://www.freeiconspng.com/uploads/shopping-cart-icon-30.png"
-                         style="height: 75px; margin-left: 10px">
+                    <a href="/#/">
+                        <img src="http://www.freeiconspng.com/uploads/shopping-cart-icon-30.png"
+                                        style="height: 75px; margin-left: 10px">
+                    </a>
                 </div>
                 <div class="form-header"
                      style=" display: flex; justify-content: center; align-items: center; padding-left: 25px">
