added controller for itemsByCategory

--- a/main.html
+++ b/main.html
@@ -120,6 +120,7 @@
     <script src="js/controller/sampleController.js"></script>
     <script src="js/controller/ItemController.js"></script>
     <script src="js/controller/ItemSearchController.js"></script>
+    <script src="js/controller/ItemCategorySearchController.js"></script>
 
 </body>
 </html>
