minor changes in views. Added custom directive itemCard

--- a/main.html
+++ b/main.html
@@ -77,7 +77,7 @@
             <div flex-gt-md="33" flex="">
                 <md-card md-whiteframe="4" style="height: 75px; padding-left: 50px; padding-right: 50px">
                     <md-input-container class="input-add-item">
-                        <label>Look for product</label>
+                        <label><md-icon>search</md-icon> Look for product</label>
                         <input ng-model="itemName" ng-change="getItemsByName()" type="text">
                     </md-input-container>
                 </md-card>
