demo cart in Dialog

--- a/main.html
+++ b/main.html
@@ -98,6 +98,11 @@
             <ng-view style="width: 100%"></ng-view>
         </div>
 
+        <div style="visibility: hidden">
+            <div class="md-dialog-container" id="mainDialog">
+            </div>
+        </div>
+
     </div>
 
 
