--- a/main.html
+++ b/main.html
@@ -127,6 +127,7 @@
     <script src="js/controller/AppController.js"></script>
     <script src="js/controller/ItemFormController.js"></script>
     <script src="js/controller/LoginController.js"></script>
+    <script src="js/controller/StoreManagerController.js"></script>
 
     <script src="js/controller/sampleController.js"></script>
     <script src="js/controller/ItemController.js"></script>
