--- a/main.html
+++ b/main.html
@@ -112,6 +112,9 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-resource.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-sanitize.min.js"></script>
+    <script src="js/lib/angular-http-auth.js"></script>
 
     <!-- Angular Material Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.1/angular-material.min.js"></script>
@@ -123,6 +126,7 @@
     <script src="js/service/ItemService.js"></script>
     <script src="js/service/StoreService.js"></script>
     <script src="js/service/ReviewService.js"></script>
+    <script src="js/service/SecurityServices.js"></script>
     <script src="js/controller/StoreController.js"></script>
     <script src="js/controller/AppController.js"></script>
     <script src="js/controller/ItemFormController.js"></script>
